bonkers first commit

--- a/EXODIA_ENGINE.vcxproj.filters
+++ b/EXODIA_ENGINE.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="scenebuilder.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="planet.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="bonds.h">
@@ -43,6 +46,9 @@
     </ClInclude>
     <ClInclude Include="scenebuilder.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="planet.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
